added user not found exception class

--- a/CRUDApplication/application.properties
+++ b/CRUDApplication/application.properties
@@ -5,4 +5,8 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.h2.console.path=/h2-console
 
-#line 2 is where you put the ip address for gcp
+
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_example
+#spring.datasource.username=springuser
+#spring.datasource.password=ThePassword
